
2010-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13608: htmlArea RTE: Make height of the context menu configurable
	* Updated NEWS.txt as follow-up to #13580: htmlArea RTE: Extjize the RTE
	* Fixed bug #13618: htmlArea RTE: RTE iframe is sometimes collapsed

2010-02-22  Dmitry Dulepov <dmitry.dulepov@gmail.com>

	* Fixed bug #12958: Catchable fatal error in indexed_search

2010-02-22  Oliver Hader  <oliver@typo3.org>

	* Added feature #11950: Support for SSL and absolute links

2010-02-21  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13252: default CSS only loadable for media screen / changed behaviour in 4.3 (Thanks to Ralf Hettinger)
	* Fixed bug #12179: Section "Help" is shown even with no subelements (Thanks to Georg Ringer)
	* Fixed bug #13570: Bug: HTML validation error in the BE with the ajax.php inclusion (Thanks to Oliver Klee)
	* Fixed bug #13289: Usage of deprecated method - getSetUpdateSignal() (Thanks to Stefan Galinski)
	* Fixed bug #13444: Filemounts are unsorted

2010-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13580: htmlArea RTE: Extjize the RTE
	* Fixed bug #13596: htmlArea RTE: Styling dropdowns grow on every use
	* Fixed bug #13597: htmlArea RTE: Toolbar select box does not close on click in editing area
	* Fixed bug #13310: htmlArea RTE: Additional Inline Elements issue with overlapping ranges
	* Fixed bug #13599: htmlArea RTE: Annoying mouse-over effect on context menu items

2010-02-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13406: thumbs.php: Thumbnails for images with transparent background look ugly (Thanks to Andreas Wolf and Steffen Ritter)
	* Fixed bug / Cleanup #12052: Restructure output of module "DB check" -> "Reference Index" (Thanks to Steffen Gebert)
	* Added feature #13204: Flash can now use the session veriCode in the FE as well (Thanks to Stephan Lucas and Steffen Ritter)