@@ -7,6 +7,7 @@
 	* Added feature #13608: htmlArea RTE: Make height of the context menu configurable
 	* Updated NEWS.txt as follow-up to #13580: htmlArea RTE: Extjize the RTE
 	* Fixed bug #13618: htmlArea RTE: RTE iframe is sometimes collapsed
+	* Fixed bug #13619: htmlArea RTE: url not detected on enter
 
 2010-02-22  Dmitry Dulepov <dmitry.dulepov@gmail.com>
 
